fix sentence error and link error. Signed-off-by: xuxinkun <xuxinkun@gmail.com>
fix sentence error and link error.
Signed-off-by: xuxinkun <xuxinkun@gmail.com>

fix sentence error and link error.
Signed-off-by: xuxinkun <xuxinkun@gmail.com>

--- a/_posts/2016-08-30-hello-2016.markdown
+++ b/_posts/2016-08-30-hello-2016.markdown
@@ -21,7 +21,7 @@ tags:
 
 我们目前的私有云技术是基于openstack进行容器集群管理，现在积极尝试使用更为轻量的kubernetes进行替换。
 
-在这里，我们希望能够分享我们的一些知识、经验甚至是教训，希望能够给业界的其他同学们一点帮助。同时，我们也欢迎业界同学们不吝赐教，同我们进行交流。
+在这里，我们分享我们实践过程中的一些知识、经验甚至是教训，希望能够给业界的其他同学们一点帮助。同时，我们也欢迎业界同学们不吝赐教，同我们进行交流。
 
 ## Thanks
 
